# shit.js

./: .gitignore  Makefile.am  README.md  aikos.js  aikosd.js  aikosd.py  aikosd.sh  app.js  autogen.sh  config.js  configure.ac  ctx.js  filecache.js  filewatcher.js  nd.js  package.json  routes.js  server.js  shit.js  shitd.sh  util.js  watch.js
demo/: factorial.c  install-demo
demo/var/: htpasswd
demo/var/www/: .htaccess  index.html  search.php
demo/var/www/secrets/: .htaccess  index.html
html/: index.html  layout.html  theme.html
routes/: index.js
www/: index.html  layout.html  theme.html
www/css/: Makefile.am  navbar.less  styles.css  styles.less  variables.less
www/js/: index.js
